Bug 153622 - Crash in: SvListView::SelectListEntry(SvTreeListEntry *,bool)
Summary: Crash in: SvListView::SelectListEntry(SvTreeListEntry *,bool)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:7.5.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-02-14 21:07 UTC by Caolán McNamara
Modified: 2023-02-16 08:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature: ["SvListView::SelectListEntry(SvTreeListEntry *,bool)"]
Regression By:


Attachments
reproducer (6.76 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2023-02-14 21:07 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2023-02-14 21:07:24 UTC
Created attachment 185370 [details]
reproducer

This bug was filed from the crash reporting server and is br-75242009-a995-4ef5-bf43-baa011ebc059.
=========================================

This can be reproduced with the attachment and clicking on the dropdown in cell A2
I believe this is a problem with the fix of bug 151794

The nSelPos is the position within aStrings, but not every entry in aStrings was inserted in the dropdown so trying to select that position can be out of range
Comment 1 Caolán McNamara 2023-02-14 21:10:04 UTC
probably can be solved by stripping the entries from aStrings that don't get inserted, so that the lookup of the position within aStrings gives a result that is valid within the entries of the dropdown
Comment 2 m.a.riosv 2023-02-14 21:16:49 UTC
Reproducible with
Version: 7.5.0.3 (X86_64) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded

But seems it works fine with
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9788a565b3241d1bd62394b9e29c322361d05f80
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US Calc: CL threaded Jumbo
Comment 3 Caolán McNamara 2023-02-14 21:27:00 UTC
https://gerrit.libreoffice.org/c/core/+/147027 makes this not crash for me and seems reasonable
Comment 4 Xisco Faulí 2023-02-15 08:38:24 UTC
I do confirm this issue was introduced by 4c8b1fa44d4f49510d3910981e649dcb08bceb36
Comment 5 Commit Notification 2023-02-15 08:49:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c9ab5237afa7bb106e97a9afa036df723f0238e8

Resolves: tdf#153622 crash in SvListView::SelectListEntry

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2023-02-15 08:50:28 UTC
done in trunk, backport to 7-5 in gerrit
Comment 7 Commit Notification 2023-02-15 12:27:33 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5c18849cc682a88c4d341fe4c12a69332140a367

tdf#79571, tdf#151794, tdf#153622: sc: Add UItest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2023-02-15 12:59:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/80cb24c37bba6ebbcd711d03e57a39b4827f3904

Resolves: tdf#153622 crash in SvListView::SelectListEntry

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2023-02-15 13:02:27 UTC
Verified in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bfbbdab13f16adf66f1afb9e2a2a103162927ba3
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 10 Commit Notification 2023-02-16 08:36:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-1":

https://git.libreoffice.org/core/commit/429a5851b84f83fd8401c99a2b8c2da34cecfe09

Resolves: tdf#153622 crash in SvListView::SelectListEntry

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.