Resolves: tdf#153622 crash in SvListView::SelectListEntry

probably since:

commit 4c8b1fa44d4f49510d3910981e649dcb08bceb36
Date:   Fri Oct 28 13:15:00 2022 -0400

    tdf#151794 sc validate: honor NO_BLANK in Cell range dropdown

Change-Id: Id6752126c0c8df8d813bc862e5533d05bba1b622
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147027
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>